# llm-judge

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/labels/: actions.ts  page.tsx
apps/web/app/observability/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/app/traces/[id]/: page.tsx
apps/web/lib/: api.ts
deploy/: docker-compose.yml
eval-bench/: README.md  pyproject.toml
eval-bench/datasets/: faithfulness_seed.v1.jsonl
eval-bench/metrics/: faithfulness.v1.yaml
eval-bench/src/judge_eval_bench/: __init__.py
eval-bench/suites/: faithfulness.yaml
eval-bench/tests/: test_metric_yaml.py
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/migrations/clickhouse/: 0001_schema.sql
services/api/migrations/postgres/: env.py
services/api/migrations/postgres/versions/: 20260510_0001_initial.py  20260510_0002_metrics_datasets_runs.py  20260510_0003_labels_agreement_queue.py
services/api/src/judge_api/: __init__.py  _ulid.py  config.py  main.py
services/api/src/judge_api/cli/: main.py
services/api/src/judge_api/db/: engine.py  models.py
services/api/src/judge_api/metrics/: __init__.py  agreement.py  ir.py  loader.py
services/api/src/judge_api/routes/: datasets.py  health.py  labels.py  metrics.py  observability.py  queue.py  runs.py  traces.py
services/api/tests/: conftest.py  test_agreement.py  test_datasets_routes.py  test_health.py  test_labels_routes.py  test_metrics_ir.py  test_metrics_routes.py  test_queue_routes.py  test_runs_routes.py  test_traces.py
services/ingest/: .golangci.yml  Dockerfile  README.md  go.mod
services/ingest/cmd/ingest/: main.go
services/ingest/internal/config/: config.go
services/ingest/internal/otlp/: otlp.go  otlp_test.go
services/ingest/internal/queue/: redis.go
services/ingest/internal/server/: server.go  server_test.go
services/workers/: Dockerfile  README.md  pyproject.toml
services/workers/src/judge_workers/: __init__.py  ch_writer.py  config.py  eval_consumer.py  main.py  stream_consumer.py
services/workers/src/judge_workers/jobs/: ping.py
services/workers/src/judge_workers/judge/: __init__.py  guards.py  length.py  parser.py  pricing.py  prompt.py  router.py  scorer.py
services/workers/tests/: test_ch_writer.py  test_judge_prompt.py  test_judge_scoring.py  test_ping.py
