[project]
name = "judge-eval-bench"
version = "0.0.0"
description = "Internal eval-bench: built-in metric YAMLs + golden datasets + Bias Report runners"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judge_eval_bench"]
