[project]
name = "judge-api"
version = "0.0.0"
description = "LLM Judge admin/read API (FastAPI)"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "asgi-lifespan>=2.1",
]

[project.scripts]
judge-api = "judge_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judge_api"]
