[project]
name = "judge-workers"
version = "0.0.0"
description = "LLM Judge background workers (Arq)"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "arq>=0.26",
    "redis>=5.2",
    "clickhouse-connect>=0.8",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[project.scripts]
judge-workers = "judge_workers.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/judge_workers"]
